# ai_detector

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  calibrate_detector.py  calibration_config.py  deploy_meld.py  detector_daemon.py  heuristic_detector.py  pyproject.toml  run_ensemble.py
.github/workflows/: ci.yml  release.yml  runtime-smoke.yml
data/evaluation/: README.md  ai_polish_generated_style_sample.txt  human_author_style_excerpt.txt  human_polish_chemistry_articles_excerpt.txt  sources.json  tmr_ai_sample_result.json  tmr_human_articles_result.json  tmr_human_author_result.json
data/evaluation/polish_pre2020_technical_papers/: broad_eval_2026-05-24.json  broad_eval_windows_2026-05-24.json  calibration_pl_ood_2026-05-24.json  excerpts.jsonl  manifest.json  windows.jsonl
data/evaluation/polish_pre2020_technical_papers/sources/: manifest.json
data/evaluation/polish_pre2020_technical_papers/sources/text/: bn_blockchain_education_2017.clean.txt  bn_building_facades_2016.clean.txt  bn_cyber_identity_2017.clean.txt  bn_ecological_engineering_2017.clean.txt  bn_fire_safety_2016.clean.txt  bn_geology_energy_storage_2017.clean.txt  bn_it_requirements_2017.clean.txt  bn_maritime_technical_2017.clean.txt  bn_nonparametric_stats_2017.clean.txt  bn_road_recycling_2016.clean.txt  pe_distribution_reliability_2017.clean.txt  umk_biomass_2018.clean.txt
docs/superpowers/plans/: 2026-06-13-personal-style-pl.md  2026-06-14-rich-metrics-v2.md
docs/superpowers/specs/: 2026-06-13-personal-style-pl-design.md  2026-06-14-rich-metrics-v2-design.md
examples/: style_samples.csv
examples/candidates/: draft_a.txt  draft_b.txt
examples/my_style_samples/: sample_01.txt  sample_02.txt
personal_style_pl/: AGENTS.md  __init__.py  ai_markers.py  bridge.py  cli.py  config.py  io.py  textsplit.py
personal_style_pl/edit/: rules.py  style_editor.py
personal_style_pl/features/: ngram_features.py  perplexity_features.py  rich_metrics.py  stylometrix_features.py  surface_features.py  textdescriptives_features.py
personal_style_pl/models/: one_class.py  supervised.py
personal_style_pl/profile/: build_profile.py  calibration.py  report.py  similarity.py
personal_style_pl/utils/: json.py
reports/: daemon_performance.md  daemon_performance_results.json  iteration_ledger.md
scripts/: benchmark_daemon.py  setup_style_env.sh
tests/: test_benchmark_daemon.py  test_calibration.py  test_deploy_meld.py  test_detector_daemon.py  test_heuristic_detector.py  test_heuristic_rich.py  test_packaging_cli.py  test_run_ensemble.py
tests/personal_style/: test_ai_markers.py  test_ai_markers_calibration.py  test_ai_markers_cli.py  test_build_profile.py  test_chunking.py  test_cli_smoke.py  test_config.py  test_describe.py  test_edit.py  test_io.py  test_ngram_bridge.py  test_ngram_roundtrip.py  test_perplexity.py  test_profile_rich.py  test_rich_metrics.py  test_similarity.py  test_stylometrix.py  test_supervised.py  test_surface_features.py  test_textdescriptives.py
