[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-detector"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "safetensors",
]

[project.scripts]
ai-detector = "run_ensemble:main"
ai-detector-deploy = "deploy_meld:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3",
]

[tool.setuptools]
py-modules = ["run_ensemble", "deploy_meld"]
