[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-detector"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "safetensors",
]

[project.scripts]
ai-detector = "run_ensemble:main"
ai-detector-deploy = "deploy_meld:main"
ai-detector-daemon = "detector_daemon:main"
ai-detector-heuristic = "heuristic_detector:main"
ai-detector-calibrate = "calibrate_detector:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3",
]

[tool.setuptools]
py-modules = [
  "run_ensemble",
  "deploy_meld",
  "detector_daemon",
  "heuristic_detector",
  "calibration_config",
  "calibrate_detector",
]
