[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-detector"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "safetensors",
]

[project.scripts]
ai-detector = "run_ensemble:main"
ai-detector-deploy = "deploy_meld:main"
ai-detector-daemon = "detector_daemon:main"
ai-detector-heuristic = "heuristic_detector:main"
ai-detector-calibrate = "calibrate_detector:main"
personal-style-pl = "personal_style_pl.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3",
]
# Personal Polish style similarity feature. `style` are hard deps of the feature
# (imported directly). `style-stylometrix` requires Python <3.13 and numpy<2; the
# pl_nask model is installed separately by scripts/setup_style_env.sh (see README).
style = ["numpy<2", "pandas", "scikit-learn", "scipy", "joblib", "rich", "regex"]
style-stylometrix = ["stylo_metrix", "spacy==3.7.2", "spacy-transformers>=1.3,<1.4", "numpy<2"]
style-ml = ["lightgbm", "shap"]
# Rich-metrics v2: interpretable AI-leaning signals. `rich` are cheap pure-Python/spaCy
# deps; perplexity relies on the existing torch+transformers plus the papuGaPT2 model,
# which scripts/setup_style_env.sh fetches (like pl_nask).
rich = ["lexicalrichness", "textdescriptives"]
rich-perplexity = []  # uses existing torch+transformers; papuGaPT2 fetched by setup script

[tool.setuptools]
py-modules = [
  "run_ensemble",
  "deploy_meld",
  "detector_daemon",
  "heuristic_detector",
  "calibration_config",
  "calibrate_detector",
]
packages = [
  "personal_style_pl",
  "personal_style_pl.features",
  "personal_style_pl.profile",
  "personal_style_pl.edit",
  "personal_style_pl.models",
  "personal_style_pl.utils",
]
